main/default/objects/Fleet__c/Fleet__c.object-meta.xml
<CustomObject>
    <label>Fleet</label>
    <nameField>
        <displayFormat>Fleet-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>