main/default/objects/Fleet__c/fields/Bus_ID__c.field-meta.xml
<CustomField>
    <fullName>Bus_ID__c</fullName>
    <label>Bus ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>