main/default/objects/Fleet__c/fields/Current_status__c.field-meta.xml
<CustomField>
    <fullName>Current_status__c</fullName>
    <defaultValue>&quot;Ready For Use&quot;</defaultValue>
    <label>Current status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled for Maintenance</fullName>
            </value>
            <value>
                <fullName>Undergoing Repairs</fullName>
            </value>
            <value>
                <fullName>Ready For Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>