main/default/objects/Fleet__c/fields/Number_of_wheels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_wheels__c</fullName>
    <label>Number of wheels</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>