main/default/objects/Fleet__c/fields/Resale_Value__c.field-meta.xml
<CustomField>
    <fullName>Resale_Value__c</fullName>
    <label>Resale Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>