main/default/objects/Fleet__c/recordTypes/Bus.recordType-meta.xml
<RecordType>
    <fullName>Bus</fullName>
    <active>true</active>
    <label>Bus</label>
</RecordType>