main/default/objects/Fleet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bus_ID__c</columns>
    <columns>Year__c</columns>
    <columns>Odometer_Reading__c</columns>
    <columns>Number_of_wheels__c</columns>
    <columns>Maximum_Capacity__c</columns>
    <columns>Image_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>